# multicamera-calibration

./: CMakeLists.txt  README.md
cmake-external/: gflagsConfig.cmake  glogConfig.cmake
sample/: ba_problem.txt
scripts/: CMakeLists.txt  build_ba.py  check_3d.py  extract_ba.py  extrinsic.py  intrinsic.py
src/: BAProblem.cpp  BAProblem.hpp  CMakeLists.txt  SnavelyReprojectionError.hpp  main.cpp
