FILE(GLOB SOURCES "*.cpp")

ADD_EXECUTABLE(${TARGET_EXEC} ${SOURCES})
TARGET_LINK_LIBRARIES(${TARGET_EXEC} ${TARGET_LIB} ${CERES_LIBRARIES}
                      ${GLOG_LIBRARIES} ${GFLAGS_LIBRARIES}) 
SET_TARGET_PROPERTIES(${TARGET_LIB} PROPERTIES COMPILE_FLAGS ${BUILD_FLAGS}) 
INSTALL(TARGETS ${TARGET_EXEC} DESTINATION bin)
