FILE(GLOB SOURCES "*.cpp")

ADD_EXECUTABLE(${TARGET_EXEC} ${SOURCES})
SET_TARGET_PROPERTIES(${TARGET_EXEC} PROPERTIES COMPILE_FLAGS ${BUILD_FLAGS}) 
SET_TARGET_PROPERTIES(${TARGET_EXEC} PROPERTIES LINK_FLAGS ${BUILD_FLAGS}) 
TARGET_LINK_LIBRARIES(${TARGET_EXEC} ${CERES_LIBRARIES}
                      ${GLOG_LIBRARIES} ${GFLAGS_LIBRARIES}) 
MESSAGE("build_flags :  ${BUILD_FLAGS}")
INSTALL(TARGETS ${TARGET_EXEC} DESTINATION bin)
